# darktable-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
darktable_mcp/: __init__.py  bridge.py  config.py  controls.py  extra_styles.py  server.py
darktable_mcp/lua/: dtmcp.lua
docs/plans/: 2026-07-05-darktable-mcp-design.md
tests/: test_bridge.py  test_controls.py  test_hardening.py  test_integration.py
