[project]
name = "darktable-mcp"
version = "0.1.0"
description = "MCP server that lets Claude edit photos live in darktable via the DBus Remote.Lua bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Caleb Bennett" }]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
darktable-mcp = "darktable_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["darktable_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running darktable GUI (deselect with '-m \"not integration\"')",
]
